fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* this sizing makes way more sense to me as default */
+* {
+  box-sizing: border-box;
+}
+
 /* Set font famelies and other "site" wide stuff here */
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -18,8 +23,11 @@
 
 /* Fixing app to utilize all the real estate and setting minimum viewable width */
 body {
+  /* shape */
   min-width: 320px;
   min-height: 100vh;
+
+  margin: 0;
 }
 
 /* Theme stuff here */
